# medical-assitance-agent

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml  rag.srv.dockerfile
notebook/: clean_data.ipynb  explore.ipynb
src/: config.py  ingest.py  main.py  query.py  utils.py
src/api/: core.py
src/core/: ingest.py  query.py
src/utils/: cleaner.py  intilizer.py  model_wrapper.py
